[package]
name = "rustcgi-directory-server"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-util = "0.3"
http = "0.2"
tokio = { version = "0.2", features = ["time"] }
warp = "0.2"

[build-dependencies]
bindgen = "0.53"
